--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,464 @@
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden;
-}
-
-header {
-  background-image: url(../images/ac1.jpg);
-  background-position: center;
-  background-size: cover;
-  height: 100vh;
-  padding: 2rem 7rem;
-  font-family: 'Times New Roman', Times, serif;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 10px;
-    background-color: rgba(0, 0, 0, 0.146);
-    color: black;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-}
-
-nav ul li {
-    display: flex;
-    margin: 15px;
-}
-
-nav ul li a {
-    color: black;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-nav ul li a:hover {
-    color: blue;
-}
-
-section {
-    padding: 10rem 5rem;
-    text-align: center;
-}
-
-#home h1{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 45px;
-}
-
-#home p {
-    font-size: 25px;
-}
-
-/*about innovator*/
-#title {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 30px;
-}
-
-#intro {
-    padding-bottom: 30px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-
- #intro_text {
-    display: flex;
-    text-align: left;
+ * {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+     font-family: sans-serif;
  }
 
-#pic {
-    display: flex;
-    justify-content: flex-end;
-}
+ .navbar {
+     background: white;
+     height: 80px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-size: 1rem;
+     position: sticky;
+     top: 0;
+     z-index: 999;
+ }
 
-#pic img {
-    max-width: 100%;
-    max-height: 500px;
-    height: auto;
-    border-radius: 5px;
-}
+ .navbar_container {
+     display: flex;
+     justify-content: space-between;
+     height: 80px;
+     z-index: 1;
+     width: 100%;
+     max-width: 1300px;
+     margin: 0 auto;
+     padding: 0 30px;
+ }
 
-/*our products*/
-#products_gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 1rem;
-    gap: 10px
-}
+ #navbar_logo {
+     background-color: #ff8177;
+     background-image: linear-gradient(to top, #adbdb1 0%, #121010 100%);
+     background-size: 100%;
+     -webkit-background-clip: text;
+     -moz-background-clip: text;
+     -webkit-text-fill-color: transparent;
+     -moz-text-fill-color: transparent;
+     display: flex;
+     align-items: center;
+     cursor: pointer;
+     text-decoration: none;
+     font-size: 1.5rem;
+ }
 
-#products_gallery img {
-    width: 300px;
-    height: 350px;
-    border-radius: 10px;
-}
 
-#focus{
-    font-size: 20px;
-}
+ .navbar_menu {
+     display: flex;
+     align-items: center;
+     list-style: none;
+     text-align: center;
+ }
 
-#solution_list {
-    list-style: none;
-}
+ .navbar_item {
+     height: 80px;
+ }
 
-#support h2 p {
-    font-size: 25px;
-}
-#support_list{
-    list-style: none;
-}
-button {
-    background-color: #0288d1;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 18px;
-    cursor: pointer;
-    border-radius: 5px;
-}
+ .navbar_links {
+     color: black;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     text-decoration: none;
+     padding: 0 1rem;
+     height: 100%;
+ }
 
-button:hover {
-    background-color: #02669a;
-}
+ .navbar_links:hover {
+     color: red;
+     transition: all 0.3s ease;
+ }
 
-footer {
-    background-color: rgba(0, 0, 0, 0.146) ;
-    color: black;
-    text-align: center;
-    padding: 10px 0;
-    margin-top: 20px;
-}
+ @media screen and (max-width:960px) {
+     .navbar_container {
+         display: flex;
+         justify-content: space-between;
+         height: 80px;
+         z-index: 1;
+         width: 100%;
+         max-width: 1300px;
+         padding: 0;
+     }
+
+     .navbar_menu {
+         display: grid;
+         grid-template-columns: auto;
+         margin: 0;
+         width: 100%;
+         position: absolute;
+         top: -1000px;
+         opacity: 0;
+         transition: all 0.5s ease;
+         height: 50vh;
+         z-index: -1;
+         background: black;
+
+     }
+
+     .navbar_menu.active {
+         background: black;
+         top: 100%;
+         opacity: 1;
+         transition: all 0.5s ease;
+         z-index: 99;
+         height: 50vh;
+         font-size: 1.5rem;
+     }
+
+     #navbar_logo {
+         padding: 20px;
+     }
+
+     .navbar_toggle .bar {
+         width: 25px;
+         height: 3px;
+         margin: 5px auto;
+         transition: all 0.3s ease-in-out;
+         background: black;
+     }
+
+     .navbar_item {
+         width: 100%;
+     }
+
+     .navbar_links {
+         text-align: center;
+         padding: 1.5rem;
+         width: 100%;
+         display: table;
+     }
+
+     #mobile_menu {
+         position: absolute;
+         top: 20%;
+         right: 5%;
+         transform: translate(5%, 20%);
+     }
+
+    
+ }
+
+ #main {
+     background-image: url(../images/ac3.jpg);
+     background-position: center;
+     background-size: cover;
+     height: 100vh;
+     padding: 2rem 7rem;
+
+ }
+
+ .main_container {
+     display: grid;
+     grid-template-columns: 1fr 1fr;
+     align-items: center;
+     justify-self: center;
+     margin: 0 auto;
+     height: 90vh;
+     z-index: 1;
+     width: 100%;
+     max-width: 1300px;
+     padding: 50px;
+ }
+
+ .main_content h1 {
+     font-size: 3rem;
+     background-color: #08ff46;
+     background-image: linear-gradient(to top, #ff0810 0%, #ff99f7 100%);
+     background-size: 100%;
+     -webkit-background-clip: text;
+     -moz-background-clip: text;
+     -webkit-text-fill-color: transparent;
+     -moz-text-fill-color: transparent;
+ }
+
+ .main_content h2 {
+     font-size: 3rem;
+     background-color: #08ff46;
+     background-image: linear-gradient(to top, #1805a9 0%, #cf41d4 100%);
+     background-size: 100%;
+     -webkit-background-clip: text;
+     -moz-background-clip: text;
+     -webkit-text-fill-color: transparent;
+     -moz-text-fill-color: transparent;
+ }
+
+ .main_content p {
+     margin-top: 1rem;
+     font-size: 1.5rem;
+     font-weight: 700;
+     color: black;
+ }
+
+ .main_btn {
+     font-size: 1rem;
+     background-image: linear-gradient(to top, #f0080c 0%, #d4419c 100%);
+     padding: 14px 32px;
+     border: none;
+     border-radius: 3px;
+     color: white;
+     margin-top: 2rem;
+     cursor: pointer;
+     position: relative;
+     transition: all 0.35s;
+     outline: none;
+ }
+
+ .main_btn a {
+     position: relative;
+     z-index: 2;
+     color: white;
+     text-decoration: none;
+ }
+
+ .main_btn:after {
+     position: absolute;
+     content: '';
+     top: 0;
+     left: 0;
+     width: 0;
+     height: 100%;
+     background: #1805a9;
+     transition: all 0.35s;
+     border-radius: 4px;
+ }
+
+ .main_btn:hover {
+     color: white;
+ }
+
+ .main_btn:hover:after {
+     width: 100%;
+ }
+
+ .main_img_container {
+     text-align: center;
+
+ }
+
+ #main_img {
+     height: 30%;
+     width: 60%;
+ }
+
+ /*responsiveness*/
+
+ @media screen and (max-width: 768px) {
+     .main_container {
+         display: grid;
+         grid-template-columns: auto;
+         align-items: center;
+         justify-self: center;
+         width: 100%;
+         margin: 0 auto;
+         height: 90vh;
+     }
+
+     .main_content {
+         text-align: center;
+         margin: 4rem;
+     }
+
+     .main_content h1 {
+         font-size: 2rem;
+         margin-top: 1.5rem;
+     }
+
+     .main_content h2 {
+         font-size: 2rem;
+     }
+
+     .main_content p {
+         margin-top: 1rem;
+         font-size: 1rem;
+     }
+
+     @media screen and (max-width: 480px) {
+         .main_content h1 {
+             font-size: 1.5rem;
+             margin-top: 2rem;
+         }
+
+         .main_content h2 {
+             font-size: 2rem;
+         }
+
+         .main_content p {
+             margin-top: 1.5rem;
+             font-size: 1rem;
+         }
+
+         .main_btn {
+             padding: 12px 36px;
+             margin: 2.5rem 0;
+         }
+     }
+ }
+
+ /*Innovator*/
+
+ .innovator_container {
+     display: grid;
+     grid-template-columns: 1fr 1fr;
+     align-items: center;
+     margin: 0 auto;
+     height: 100vh;
+     width: 100%;
+     max-width: 1300px;
+     padding: 50px;
+ }
+
+ .innovator_text h1 {
+     font-size: 3rem;
+     color: #544aa2;
+ }
+
+ .innovator_text p {
+     margin-top: 1rem;
+ }
+
+ .innovator_img {
+     text-align: center;
+ }
+
+ .innovator_img img {
+     height: 80%;
+     width: 80%;
+ }
+
+ @media screen and (max-width: 768px) {
+     .innovator_container {
+         display: grid;
+         grid-template-columns: auto;
+         align-items: center;
+         justify-content: center;
+         width: 100%;
+         margin: 0 auto;
+         height: 90vh;
+     }
+
+     .innovator_text {
+         text-align: center;
+         margin-bottom: 4rem;
+     }
+
+     .innovator_text h1 {
+         font-size: 2rem;
+         margin-top: 2rem;
+     }
+
+ }
+
+ @media screen and (max-width: 480px) {
+     .innovator_text h1 {
+         font-size: 1.5rem;
+         margin-top: 1rem;
+     }
+
+ }
+
+ /*Products*/
+
+ #products {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     height: 100vh;
+ }
+
+ #products h1 {
+     color: #3d2db7;
+     background-size: 100%;
+     padding-top: 7rem;
+     font-size: 1rem;
+ }
+
+ .products_container {
+     display: flex;
+     justify-content: center;
+     flex-wrap: wrap;
+ }
+
+ .product_card {
+     margin: 1rem;
+     height: 400px;
+     width: 300px;
+     border-radius: 4px;
+     background-image: url('/images/solar_powered_ac.png');
+     background-size: cover;
+     position: relative;
+ }
+
+ .product_card:nth-child(2) {
+     background-image: url('/images/solar_powered_ac_1.png');
+     background-size: cover;
+     position: relative;
+ }
+
+ .product_card:nth-child(3) {
+     background-image: url('/images/solar_powered_ac_2.png');
+     background-size: cover;
+     position: relative;
+ }
+
+ .product_card:nth-child(4) {
+     background-image: url('/images/solar_powered_ac_3.png');
+     background-size: cover;
+     position: relative;
+ }
+
+ .product_card:nth-child(5) {
+     background-image: url('/images/solar_powered_portable_ac.png');
+     background-size: cover;
+     position: relative;
+ }
+
+ .product_card:nth-child(2) {
+     background-image: url('/images/solar_powered_ac_1.png');
+     background-size: cover;
+     position: relative;
+ }
+
+ #products h2 {
+     position: absolute;
+     top: 350px;
+     left: 30px;
+     color: white;
+ }
+
+ #products p {
+     position: absolute;
+     top: 290px;
+     left: 30px;
+     font-weight: bold;
+ }
+
+ .product_card:hover {
+     transform: scale(1.075);
+     transition: 0.2s ease-in;
+     cursor: pointer;
+ }
+
+ @media screen and (max-width: 960px) {
+     #products {
+         height: 1600px;
+     }
+     
+     #products h1 {
+        font-size: 2rem;
+        margin-top: 12rem;
+     }
+ }
+
+ @media screen and (max-width: 480px) {
+    #products {
+        height: 1400px;
+    }
+     #products h1 {
+        font-size: 1.2rem;
+     }
+
+     .product_card {
+        width: 300px;
+     }
+ }
