--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
  }
 
  .navbar {
-     background: #003366;
+     background: green;
      height: 50px;
      display: flex;
      justify-content: center;
@@ -37,7 +37,7 @@
  }
 
  #navbar_logo {
-    color: white;
+    color: gold;
      background-size: 100%;
      display: flex;
      align-items: center;
@@ -98,12 +98,12 @@
          transition: all 0.5s ease;
          height: 50vh;
          z-index: -1;
-         background: black;
+         background: green;
 
      }
 
      .navbar_menu.active {
-         background: black;
+         background: green;
          top: 100%;
          opacity: 1;
          transition: all 0.5s ease;
@@ -121,7 +121,7 @@
          height: 3px;
          margin: 5px auto;
          transition: all 0.3s ease-in-out;
-         background: white;
+         background: gold;
      }
 
      .navbar_item {
@@ -164,7 +164,7 @@
  /*hero section*/
 
  #main {
-     background-color: #003366;
+     background-color: green;
  }
 
  .main_container {
@@ -174,7 +174,7 @@
      justify-self: center;
      margin: 0 auto;
      height: 90vh;
-     background-color: #003366;
+     background-color: green;
      z-index: 1;
      width: 100%;
      max-width: 1300px;
@@ -183,8 +183,8 @@
 
  .main_content h1 {
      font-size: 4rem;
-     background-color: #ff8177;
-     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+     background-color: goldenrod;
+     background-image: linear-gradient(to top, #ffe608 0%, #ffe499 100%);
      background-size: 100%;
      -webkit-background-clip: text;
      -moz-background-clip: text;
@@ -195,7 +195,7 @@
  .main_content h2 {
      font-size: 3rem;
      background-color: #08ff46;
-     background-image: linear-gradient(to top, #b721ff 0%, #21d4fd 100%);
+     background-image: linear-gradient(to top, #fffb21 0%, #21d4fd 100%);
      background-size: 100%;
      -webkit-background-clip: text;
      -moz-background-clip: text;
@@ -212,7 +212,7 @@
 
  .main_btn {
      font-size: 1rem;
-     background-image: linear-gradient(to top, #f0080c 0%, #d4419c 100%);
+     background-image: linear-gradient(to top, #f0d508 0%, #92d441 100%);
      padding: 14px 32px;
      border: none;
      border-radius: 3px;
@@ -238,7 +238,7 @@
      left: 0;
      width: 0;
      height: 100%;
-     background: #1805a9;
+     background: green;
      transition: all 0.35s;
      border-radius: 4px;
  }
@@ -265,7 +265,7 @@
  /*responsiveness*/
  @media screen and (max-width: 1023px) {
     #main {
-        background-color: #003366;
+        background-color: green;
         padding: 20px;
     }
     .main_container {
@@ -333,7 +333,7 @@
 
  .innovator_text h1 {
      font-size: 3rem;
-     color: #003366;
+     color: green;
  }
 
  .innovator_text p {
@@ -380,7 +380,7 @@
      align-items: center;
      margin-left: 20rem;
      font-size: 30px;
-     color: #003366;
+     color: green;
 
  }
 
@@ -401,7 +401,7 @@
      height: 75px;
      width: 40px;
      font-size: 1.9rem;
-     background: #003366;
+     background: green;
      color: white;
      cursor: pointer;
      transform: translateY(-50%);
@@ -490,15 +490,16 @@ input, textarea, a {
     width: 35%;
     height: 100%;
     margin-top: 44px;
-    padding: 40px 25px ;
+    margin-left: 35px;
+    padding: 35px 20px ;
     border-radius: 10px;
     color:white;
-    background: #003366;
+    background: green;
 }
 
 .info_title {
     text-align: left;
-    margin: 15px;
+    margin: 13px;
     font-size: 30px;
     letter-spacing: 0.5px;
 }
@@ -506,14 +507,14 @@ input, textarea, a {
 .info_sub_title {
     font-size: 18px;
     font-weight: 300;
-    margin: 17px;
+    margin: 15px;
     letter-spacing: 0.5px;
     line-height: 26px;
 }
 
 .info_details {
     list-style: none;
-    margin: 20px ;
+    margin: 15px ;
 }
 
 .info_details li {
@@ -527,7 +528,7 @@ input, textarea, a {
 }
 
 .info_details li a:hover {
-    color: #f0080c;
+    color: #08f008;
 }
 
 .social_icons {
@@ -542,7 +543,7 @@ input, textarea, a {
 
 .social_icons li i {
     background: white;
-    color: #003366;
+    color: green;
     padding: 16px;
     font-size: 20px;
     border-radius: 22%;
@@ -551,7 +552,7 @@ input, textarea, a {
 }
 
 .social_icons li i:hover {
-    background: #f0080c;
+    background: #08f00c;
     color: white;
 }
 
@@ -596,7 +597,7 @@ input, textarea, a {
     padding: 0 30px;
     margin: 14px 12px ;
     border-radius: 10px;
-    box-shadow:8px 8px 8px #0b1d2e, inset -8px -8px 8px #ffffff ;
+    box-shadow:8px 8px 8px #0b2e10, inset -8px -8px 8px #ffffff ;
 }
 
 .form_fields .form_group:last-child {
@@ -607,20 +608,21 @@ input, textarea, a {
     width: 95%;
     height: 55px;
     margin: 0 10px;
+    border: none;
     border-radius: 30px;
     font-size: 20px;
     font-weight: 500;
     outline: none;
     cursor: pointer;
     text-align: center;
-    background: #003366;
+    background: #00660f;
     color: white;
     transition: 0.5s;
 }
 
 .submit_btn:hover {
-    background: white;
-    color: #003366;
+    background: gold;
+    color: #036600;
 }
 
 @media screen and (max-width: 1023px) {
@@ -629,6 +631,10 @@ input, textarea, a {
         text-align: center;
         font-size: 24px;
         margin: 10px;
+    }
+
+    .info_wrap{
+        width: 35%;
     }
 
     .info_sub_title {
@@ -647,10 +653,11 @@ input, textarea, a {
         border-radius: 20%;
     }
 
+
     .form_wrap {
         display: flex;
         flex-direction: column;
-        width: 80%;
+        width: 75%;
         float: none;
         padding: 30px 20px;
         border-radius: 8px;
@@ -697,7 +704,7 @@ input, textarea, a {
     display: flex;
     justify-content: center;
     padding: 20px;
-    background: #003366;
+    background: green;
     color: white;
     
  }
