--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
  }
 
  #navbar_logo:hover {
-    color: #f0080c;
+    color: gold;
  }
 
  .navbar_menu {
@@ -62,7 +62,7 @@
  }
 
  .navbar_links {
-     color: white;
+     color: gold;
      display: flex;
      align-items: center;
      justify-content: center;
@@ -72,7 +72,7 @@
  }
 
  .navbar_links:hover {
-     color: red;
+     color: white;
      transition: all 0.3s ease;
  }
 
@@ -409,7 +409,7 @@
  }
 
  .slider_wrapper .fa-solid:hover {
-     background: #003366;
+     background: green;
  }
 
  .slider_wrapper .fa-solid#prev_slide {
@@ -490,8 +490,7 @@ input, textarea, a {
     width: 35%;
     height: 100%;
     margin-top: 44px;
-    margin-left: 35px;
-    padding: 35px 20px ;
+    padding: 30px 20px ;
     border-radius: 10px;
     color:white;
     background: green;
@@ -499,7 +498,7 @@ input, textarea, a {
 
 .info_title {
     text-align: left;
-    margin: 13px;
+    margin: 10px;
     font-size: 30px;
     letter-spacing: 0.5px;
 }
@@ -507,14 +506,14 @@ input, textarea, a {
 .info_sub_title {
     font-size: 18px;
     font-weight: 300;
-    margin: 15px;
+    margin: 17px;
     letter-spacing: 0.5px;
     line-height: 26px;
 }
 
 .info_details {
     list-style: none;
-    margin: 15px ;
+    margin: 20px ;
 }
 
 .info_details li {
@@ -569,6 +568,7 @@ input, textarea, a {
     margin-left: 23px;
     font-size: 28px;
     letter-spacing: 0.5px;
+    color: green;
 }
 
 .form_fields {
@@ -605,16 +605,17 @@ input, textarea, a {
 }
 
 .submit_btn {
-    width: 95%;
+    width: 50%;
     height: 55px;
-    margin: 0 10px;
+    justify-content: center;
+    text-align: center;
+    margin: 0 180px;
     border: none;
     border-radius: 30px;
     font-size: 20px;
     font-weight: 500;
     outline: none;
     cursor: pointer;
-    text-align: center;
     background: #00660f;
     color: white;
     transition: 0.5s;
@@ -626,15 +627,11 @@ input, textarea, a {
 }
 
 @media screen and (max-width: 1023px) {
-
+    
     .info_title {
         text-align: center;
         font-size: 24px;
         margin: 10px;
-    }
-
-    .info_wrap{
-        width: 35%;
     }
 
     .info_sub_title {
@@ -653,11 +650,16 @@ input, textarea, a {
         border-radius: 20%;
     }
 
-
+        .info_wrap {
+            width: 40%;
+            align-content: center;
+            justify-content: center;
+            margin-left: 10px;
+        }
     .form_wrap {
         display: flex;
         flex-direction: column;
-        width: 75%;
+        width: 70%;
         float: none;
         padding: 30px 20px;
         border-radius: 8px;
@@ -692,12 +694,18 @@ input, textarea, a {
     }
 
     .submit_btn {
-        width: 49%;
-        height: 50px;
-        font-size: 18px;
-        margin-top: 13px;
+      width: 25%; 
+      margin: 0 auto;
+      font-size: 18px;
+      height: 50px;
     }
 }
+
+
+/*width: 49%;
+height: 50px;
+font-size: 18px;
+margin-top: 13px;*/
 
  /*footer*/
  .footer {
