--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,48 @@ h2 {
     right: 10px;
 }
 
+
+/*services section*/
+#services {
+    display: grid;
+    gap: 30px;
+    padding: 50px;
+    text-align: center;
+}
+
+h3 {
+    font-size: 25px;
+    margin-top: 20px;
+    opacity: 0;
+    animation: fadeIn 1s forwards 0.5s;
+}
+ .service_grid {
+    background: #fff;
+    border-radius: 10px;
+    gap: 20px;
+    padding: 40px;
+   margin: 20px;
+   transition: transform 0.5s ease;
+}
+
+h5 {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #000;
+}
+
+/* Check Icon */
+.service_grid .icon::before {
+    font-size: 32px;
+    background-color: #fff;
+    color: #a00000;
+    display: block;
+    margin: 0 auto 10px;
+    font-weight: bold;
+}
+
+
 /* Contact Section */
 #contact_wrapper {
     background-color: #f8f8f8;
@@ -460,6 +502,11 @@ textarea {
 
     .image_item {
         max-width: 90%;
+    }
+
+.service_wrap {
+        flex-direction: column;
+        gap: 20px;  
     }
 
     .box_wrapper {
